[gd_scene load_steps=3 format=3 uid="uid://bpvu5ti8bdk7a"]

[ext_resource type="Script" uid="uid://11gucvqd3tkt" path="res://src/scenes/UI/GameUI/PauseMenu/PauseMenu.gd" id="1_7ng4x"]
[ext_resource type="PackedScene" uid="uid://wmffm1lec8xx" path="res://src/scenes/UI/Components/VolumeSlider.tscn" id="1_j6cl5"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ng4x")

[node name="DarkBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0962047, 0.0962048, 0.0962047, 1)

[node name="Modal" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelVariation"

[node name="VBoxContainer" type="VBoxContainer" parent="Modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="RestartButton" type="Button" parent="Modal/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"CustomSimpleButton"
text = "Restart "

[node name="MainMenuButton" type="Button" parent="Modal/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"CustomSimpleButton"
text = "Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="MusicVolumeSlider" parent="Modal/VBoxContainer/HBoxContainer" instance=ExtResource("1_j6cl5")]
layout_mode = 2

[node name="SfxVolumeSlider" parent="Modal/VBoxContainer/HBoxContainer" instance=ExtResource("1_j6cl5")]
layout_mode = 2
type = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Modal/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Modal/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
